--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <div class="container">
             <!-- Logo -->
             <div class="logo">
-                <a href="#"><img src="images/image.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/image.png" alt="Logo"></a>
             </div>
             
             <!-- Navigation Links -->
@@ -20,7 +20,6 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="catalogue.html">SHOP</a></li>
-                    <li><a href="#">OCCASIONS</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
