--- a/login.html
+++ b/login.html
@@ -232,7 +232,7 @@ form {
         <div class="promo-box">
             <div class="promo-content">
                 <p>Here every click brings you closer to a perfect gift!</p>
-                <img src="model-image.png" alt="Promo Image" class="promo-image">
+                <img src="signin.png" alt="Promo Image" class="promo-image">
             </div>
         </div>
     </div>
