--- a/productdescription.html
+++ b/productdescription.html
@@ -167,7 +167,7 @@ footer p {
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#"><img src="images/image.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/image.png" alt="Logo"></a>
             </div>
             <nav>
                 <ul>
