--- a/cart.html
+++ b/cart.html
@@ -201,7 +201,7 @@
         <div class="container">
             <!-- Logo -->
             <div class="logo">
-                <a href="#"><img src="images/image.png" alt="Logo"></a>
+                <a href="index.html"><img src="images/image.png" alt="Logo"></a>
             </div>
             
             <!-- Navigation Links -->
