--- a/login.html
+++ b/login.html
@@ -228,6 +228,6 @@ form {
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
