--- a/register.html
+++ b/register.html
@@ -7,140 +7,113 @@
     <link rel="stylesheet" href="style.css">
     <style>
         /* General Page Styles */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Arial', sans-serif;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Arial', sans-serif;
+        }
 
-body {
-  background-color: #f2f2f2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+        body {
+            background-color: #f2f2f2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-.signup-container {
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 400px;
-  padding: 20px;
-}
+        .signup-container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            padding: 20px;
+        }
 
-h2 {
-  font-size: 24px;
-  color: #333;
-  text-align: center;
-  margin-bottom: 15px;
-}
+        h2 {
+            font-size: 24px;
+            color: #333;
+            text-align: center;
+            margin-bottom: 15px;
+        }
 
-p {
-  font-size: 14px;
-  color: #777;
-  text-align: center;
-  margin-bottom: 25px;
-}
+        p {
+            font-size: 14px;
+            color: #777;
+            text-align: center;
+            margin-bottom: 25px;
+        }
 
-label {
-  font-size: 14px;
-  color: #555;
-  margin-bottom: 5px;
-  display: block;
-}
+        #register-message {
+            text-align: center;
+            font-size: 14px;
+            color: #e74c3c;
+            margin-bottom: 15px;
+        }
 
-input {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  font-size: 16px;
-  outline: none;
-}
+        label {
+            font-size: 14px;
+            color: #555;
+            margin-bottom: 5px;
+            display: block;
+        }
 
-input:focus {
-  border-color: #4CAF50;
-}
+        input {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            font-size: 16px;
+            outline: none;
+        }
 
-button {
-  width: 100%;
-  padding: 14px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
+        input:focus {
+            border-color: #4CAF50;
+        }
 
-button:hover {
-  background-color: #45a049;
-}
+        button {
+            width: 100%;
+            padding: 14px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
 
-.signup-with-others {
-  text-align: center;
-  margin-top: 20px;
-}
+        button:hover {
+            background-color: #45a049;
+        }
 
-.signup-with-others p {
-  margin-bottom: 10px;
-  font-size: 14px;
-  color: #777;
-}
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
 
-.signup-with-others button {
-  width: 48%;
-  padding: 12px;
-  border-radius: 8px;
-  font-size: 14px;
-  margin: 5px;
-}
+        a:hover {
+            text-decoration: underline;
+        }
 
-.google-signup {
-  background-color: #4285F4;
-  color: white;
-}
+        /* Responsive Design */
+        @media screen and (max-width: 480px) {
+            .signup-container {
+                width: 100%;
+                padding: 15px;
+            }
 
-.google-signup:hover {
-  background-color: #357ae8;
-}
+            h2 {
+                font-size: 20px;
+            }
 
-a {
-  color: #4CAF50;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-/* Responsive Design */
-@media screen and (max-width: 480px) {
-  .signup-container {
-    width: 100%;
-    padding: 15px;
-  }
-
-  h2 {
-    font-size: 20px;
-  }
-
-  input,
-  button {
-    font-size: 14px;
-  }
-
-  .signup-with-others button {
-    width: 100%;
-    margin: 5px 0;
-  }
-}
-
+            input,
+            button {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -148,27 +121,24 @@ a:hover {
         <h2>Signup</h2>
         <p>Fill in the details to create your account</p>
 
+        <div id="register-message"></div>
+
         <form id="signupForm">
-            <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+            <label for="register-name">Full Name</label>
+            <input type="text" id="register-name" name="name" placeholder="Enter your full name" required>
 
-            <label for="email">Email Address</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <label for="register-email">Email Address</label>
+            <input type="email" id="register-email" name="email" placeholder="Enter your email" required>
 
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            <label for="register-password">Password</label>
+            <input type="password" id="register-password" name="password" placeholder="Enter your password" required>
 
             <button type="submit">Sign Up</button>
         </form>
 
-        <div class="signup-with-others">
-            <p>Or sign up with</p>
-            <button class="google-signup">Sign up with Google</button>
-        </div>
-
         <p>Already have an account? <a href="login.html">Login here</a></p>
     </div>
 
-    <script src="register.js"></script> 
+    <script src="register.js"></script>
 </body>
 </html>
